Split puppetserver into a standalone image and one for use with puppetdb

--- a/puppetserver/Dockerfile
+++ b/puppetserver/Dockerfile
@@ -1,30 +1,19 @@
-FROM ubuntu:14.04
+FROM puppet/puppetserver-standalone:2.3.2
 MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
-ENV PUPPET_SERVER_VERSION="2.3.2" PUPPETSERVER_JAVA_ARGS="-Xms256m -Xmx256m" PATH=/opt/puppetlabs/server/bin:/opt/puppetlabs/puppet/bin:/opt/puppetlabs/bin:$PATH
+ENV PUPPETDB_TERMINUS_VERSION="4.0.2"
 
-LABEL com.puppet.version=$PUPPET_SERVER_VERSION com.puppet.git.repo="https://github.com/puppetlabs/dockerfiles" com.puppet.git.sha="80a406f29bfcb95d0b08bdf868d048ab1cdadf6a" com.puppet.build-time="2016-05-09T16:43:46Z" com.puppet.dockerfile="/Dockerfile"
+LABEL com.puppet.version=$PUPPET_SERVER_VERSION com.puppet.git.sha="161bca4fed59997fd19581df38678caeefe813bc" com.puppet.buildtime="2016-05-16T08:05:27Z"
 
 RUN apt-get update && \
-    apt-get install -y wget=1.15-1ubuntu1 && \
-    wget https://apt.puppetlabs.com/puppetlabs-release-pc1-trusty.deb && \
-    dpkg -i puppetlabs-release-pc1-trusty.deb && \
-    apt-get update && \
-    apt-get install --no-install-recommends -y puppetserver="$PUPPET_SERVER_VERSION"-1puppetlabs1 && \
+    apt-get install --no-install-recommends -y puppetdb-termini="$PUPPETDB_TERMINUS_VERSION"-1puppetlabs1 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-COPY puppetserver /etc/default/puppetserver
-COPY logback.xml /etc/puppetlabs/puppetserver/
-COPY request-logging.xml /etc/puppetlabs/puppetserver/
+RUN puppet config set storeconfigs_backend puppetdb --section main && \
+    puppet config set storeconfigs true --section main && \
+    puppet config set reports puppetdb --section main
 
-RUN puppet config set autosign true --section master
+COPY puppetdb.conf /etc/puppetlabs/puppet/
 
 COPY Dockerfile /
-
-VOLUME /etc/puppetlabs/code/
-
-EXPOSE 8140
-
-ENTRYPOINT ["/opt/puppetlabs/bin/puppetserver"]
-CMD ["foreground" ]
