--- a/puppet-agent-ubuntu/Dockerfile
+++ b/puppet-agent-ubuntu/Dockerfile
@@ -1,16 +1,16 @@
-FROM ubuntu:14.04
+FROM ubuntu:16.04
 MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
-ENV PUPPET_AGENT_VERSION 1.5.0
+ENV PUPPET_AGENT_VERSION="1.5.0" UBUNTU_CODENAME="xenial"
 
-LABEL com.puppet.version=$PUPPET_AGENT_VERSION com.puppet.git.repo="https://github.com/puppetlabs/dockerfiles" com.puppet.git.sha="5e149a952dac882b6e2ade7d68d274208b29b418" com.puppet.buildtime="2016-05-18T08:15:26Z" com.puppet.dockerfile="/Dockerfile"
+LABEL com.puppet.version=$PUPPET_AGENT_VERSION com.puppet.git.repo="https://github.com/puppetlabs/dockerfiles" com.puppet.git.sha="40aecdce7edd8ee4110a7d1a9ac3ad7a711f96a0" com.puppet.buildtime="2016-05-18T16:13:24Z" com.puppet.dockerfile="/Dockerfile"
 
 RUN apt-get update && \
-    apt-get install -y wget=1.15-1ubuntu1 && \
-    wget https://apt.puppetlabs.com/puppetlabs-release-pc1-trusty.deb && \
-    dpkg -i puppetlabs-release-pc1-trusty.deb && \
+    apt-get install -y wget=1.17.1-1ubuntu1 && \
+    wget https://apt.puppetlabs.com/puppetlabs-release-pc1-"$UBUNTU_CODENAME".deb && \
+    dpkg -i puppetlabs-release-pc1-"$UBUNTU_CODENAME".deb && \
     apt-get update && \
-    apt-get install --no-install-recommends -y puppet-agent="$PUPPET_AGENT_VERSION"-1trusty && \
+    apt-get install --no-install-recommends -y puppet-agent="$PUPPET_AGENT_VERSION"-1"$UBUNTU_CODENAME" && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
