--- a/puppetdb-postgres/Dockerfile
+++ b/puppetdb-postgres/Dockerfile
@@ -1,7 +1,7 @@
 FROM postgres:9.5.2
 MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
-LABEL com.puppet.git.repo="https://github.com/puppetlabs/dockerfiles" com.puppet.git.sha="161bca4fed59997fd19581df38678caeefe813bc" com.puppet.buildtime="2016-05-09T14:27:10Z" com.puppet.dockerfile="/Dockerfile"
+LABEL com.puppet.version="0.1.0" com.puppet.git.repo="https://github.com/puppetlabs/dockerfiles" com.puppet.git.sha="c685b01efe95d7268a6e35f14dff30aa92c37cef" com.puppet.buildtime="2016-05-18T16:35:37Z" com.puppet.dockerfile="/Dockerfile"
 
 COPY Dockerfile /
 COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
