--- a/puppetexplorer/Dockerfile
+++ b/puppetexplorer/Dockerfile
@@ -1,14 +1,15 @@
-FROM alpine:3.3
+FROM alpine:3.4
 MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
 ENV PUPPET_EXPLORER_VERSION="2.0.0"
 
-LABEL com.puppet.version=$PUPPET_EXPLORER_VERSION com.puppet.git.repo="https://github.com/puppetlabs/dockerfiles" com.puppet.git.sha="ca4b5726dd0e244b04ed7f84d6568f79943c91ce" com.puppet.buildtime="2016-05-29T08:18:48Z" com.puppet.dockerfile="/Dockerfile"
+LABEL com.puppet.version=$PUPPET_EXPLORER_VERSION com.puppet.git.repo="https://github.com/puppetlabs/dockerfiles" com.puppet.git.sha="b441445ca4c565eee2536bd01260c498012d5c5b" com.puppet.buildtime="2016-08-12T07:55:18Z" com.puppet.dockerfile="/Dockerfile"
 
-RUN apk add --no-cache --update ca-certificates && \
+RUN apk add --no-cache --update ca-certificates wget && \
+    update-ca-certificates && \
     rm -rf /var/cache/apk/*
 
-RUN wget "https://caddyserver.com/download/build?os=linux&arch=amd64&features=cors,jsonp,prometheus,realip" -O - | tar -xz --no-same-owner -C /usr/bin/ caddy
+RUN wget "https://caddyserver.com/download/build?os=linux&arch=amd64&features=prometheus,realip" -O - | tar -xz --no-same-owner -C /usr/bin/ caddy
 
 RUN wget https://github.com/spotify/puppetexplorer/releases/download/"$PUPPET_EXPLORER_VERSION"/puppetexplorer-"$PUPPET_EXPLORER_VERSION".tar.gz -O - | tar -xz && \
     ln -s puppetexplorer-"$PUPPET_EXPLORER_VERSION" /puppetexplorer
