--- a/puppetexplorer/Dockerfile
+++ b/puppetexplorer/Dockerfile
@@ -3,7 +3,16 @@ MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
 ENV PUPPET_EXPLORER_VERSION="2.0.0"
 
-LABEL com.puppet.version=$PUPPET_EXPLORER_VERSION com.puppet.git.repo="https://github.com/puppetlabs/dockerfiles" com.puppet.git.sha="ffeb9772ad67da19d12b69a898fd431c919188ed" com.puppet.buildtime="2016-08-12T08:14:20Z" com.puppet.dockerfile="/Dockerfile"
+LABEL org.label-schema.vendor="Puppet" \
+      org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
+      org.label-schema.name="Puppet Explorer" \
+      org.label-schema.license="Apache-2.0" \
+      org.label-schema.version=$PUPPET_EXPLORER_VERSION \
+      org.label-schema.vcs-url="https://github.com/puppetlabs/puppet-in-docker" \
+      org.label-schema.vcs-ref="791b5505348e901a21b2ca2700068e2743019848" \
+      org.label-schema.build-date="2016-09-14T13:37:00Z" \
+      org.label-schema.schema-version="1.0" \
+      com.puppet.dockerfile="/Dockerfile"
 
 RUN apk add --no-cache --update ca-certificates wget && \
     update-ca-certificates && \
