puppetserver-standalone: Add volumes for certs
Add volumes for certs and long-lived data. (#13)

--- a/puppetserver-standalone/Dockerfile
+++ b/puppetserver-standalone/Dockerfile
@@ -32,7 +32,9 @@ COPY request-logging.xml /etc/puppetlabs/puppetserver/
 
 RUN puppet config set autosign true --section master
 
-VOLUME /etc/puppetlabs/code/
+VOLUME /etc/puppetlabs/code/ \
+       /etc/puppetlabs/puppet/ssl/ \
+       /opt/puppetlabs/server/data/puppetserver/
 
 COPY docker-entrypoint.sh /
 
