Allow subname to be specified as an env var

--- a/puppetdb/conf.d/database.conf
+++ b/puppetdb/conf.d/database.conf
@@ -1,7 +1,7 @@
 database: {
   classname: org.postgresql.Driver
   subprotocol: postgresql
-  subname: "//postgres:5432/puppetdb"
+  subname: ${PUPPETDB_SUBNAME}
   username: ${PUPPETDB_USER}
   password: ${PUPPETDB_PASSWORD}
   log-slow-statements: 10
