--- a/puppetboard/Dockerfile
+++ b/puppetboard/Dockerfile
@@ -14,7 +14,7 @@ LABEL org.label-schema.vendor="Puppet" \
       org.label-schema.schema-version="1.0" \
       com.puppet.dockerfile="/Dockerfile"
 
-RUN apk add --no-cache --update py-pip && \
+RUN apk add --no-cache --update curl py-pip && \
     rm -rf /var/cache/apk/*
 
 RUN pip install puppetboard=="$PUPPET_BOARD_VERSION" gunicorn=="$GUNICORN_VERSION"
@@ -29,3 +29,9 @@ WORKDIR /var/www/puppetboard
 CMD ["/usr/bin/gunicorn", "-b", "0.0.0.0:8000", "wsgi:application"]
 
 COPY Dockerfile /
+
+# Health check
+HEALTHCHECK --interval=10s --timeout=10s --retries=90 CMD \
+  curl --fail -X GET localhost:${PUPPETBOARD_PORT} \
+  |  grep -q 'Live from PuppetDB' \
+  || exit 1
