Making hound compliant with rubocop
Guide: https://github.com/houndci/hound/issues/977

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,9 @@ Metrics/LineLength:
 
 Metrics/BlockLength:
   Max: 100
+
+Style/StringLiterals:
+  EnforcedStyle: single_quotes
+  SupportedStyles:
+    - single_quotes
+    - double_quotes
