Rename the PuppetDB PostgreSQL connection

--- a/puppetdb/conf.d/database.conf
+++ b/puppetdb/conf.d/database.conf
@@ -1,7 +1,7 @@
 database: {
   classname: org.postgresql.Driver
   subprotocol: postgresql
-  subname: ${PUPPETDB_SUBNAME}
+  subname: ${PUPPETDB_DATABASE_CONNECTION}
   username: ${PUPPETDB_USER}
   password: ${PUPPETDB_PASSWORD}
   log-slow-statements: 10
