--- a/puppetserver/Dockerfile
+++ b/puppetserver/Dockerfile
@@ -1,7 +1,7 @@
-FROM puppet/puppetserver-standalone:5.1.3
+FROM puppet/puppetserver-standalone:5.2.0
 MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
-ENV PUPPETDB_TERMINUS_VERSION="5.1.1"
+ENV PUPPETDB_TERMINUS_VERSION="5.2.0"
 
 LABEL org.label-schema.vendor="Puppet" \
       org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
@@ -15,7 +15,7 @@ LABEL org.label-schema.vendor="Puppet" \
       com.puppet.dockerfile="/Dockerfile"
 
 RUN apt-get update && \
-    apt-get install --no-install-recommends -y puppetdb-termini="$PUPPETDB_TERMINUS_VERSION"-1puppetlabs1 && \
+    apt-get install --no-install-recommends -y puppetdb-termini="$PUPPETDB_TERMINUS_VERSION"-1xenial && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
