--- a/puppetserver/Dockerfile
+++ b/puppetserver/Dockerfile
@@ -1,9 +1,9 @@
 FROM puppet/puppetserver-standalone:5.2.0
-MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
 ENV PUPPETDB_TERMINUS_VERSION="5.2.0"
 
-LABEL org.label-schema.vendor="Puppet" \
+LABEL maintainer="Gareth Rushgrove <gareth@puppet.com>" \
+      org.label-schema.vendor="Puppet" \
       org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
       org.label-schema.name="Puppet Server" \
       org.label-schema.license="Apache-2.0" \
