--- a/puppetdb/Dockerfile
+++ b/puppetdb/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:16.04
-MAINTAINER Gareth Rushgrove "gareth@puppet.com"
 
 ENV PUPPETDB_VERSION="5.2.0" PUPPET_AGENT_VERSION="5.4.0" DUMB_INIT_VERSION="1.2.1" UBUNTU_CODENAME="xenial" PUPPETDB_DATABASE_CONNECTION="//postgres:5432/puppetdb" PUPPETDB_USER=puppetdb PUPPETDB_PASSWORD=puppetdb PUPPETDB_JAVA_ARGS="-Djava.net.preferIPv4Stack=true -Xms256m -Xmx256m" PATH=/opt/puppetlabs/server/bin:/opt/puppetlabs/puppet/bin:/opt/puppetlabs/bin:$PATH
 
-LABEL org.label-schema.vendor="Puppet" \
+LABEL maintainer="Gareth Rushgrove <gareth@puppet.com>" \
+      org.label-schema.vendor="Puppet" \
       org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
       org.label-schema.name="PuppetDB" \
       org.label-schema.license="Apache-2.0" \
