(maint) Add namespace for the 'maintainer' label

--- a/facter/Dockerfile
+++ b/facter/Dockerfile
@@ -1,6 +1,6 @@
 FROM puppet/puppet-agent-ubuntu:5.5.1
 
-LABEL maintainer="Puppet Release Team <release@puppet.com>" \
+LABEL org.label-schema.maintainer="Puppet Release Team <release@puppet.com>" \
       org.label-schema.vendor="Puppet" \
       org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
       org.label-schema.name="Facter" \
