--- a/puppet-agent-centos/Dockerfile
+++ b/puppet-agent-centos/Dockerfile
@@ -2,7 +2,7 @@ FROM centos:7
 
 ENV PUPPET_AGENT_VERSION="5.5.1"
 
-LABEL maintainer="Puppet Release Team <release@puppet.com>" \
+LABEL org.label-schema.maintainer="Puppet Release Team <release@puppet.com>" \
       org.label-schema.vendor="Puppet" \
       org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
       org.label-schema.name="Puppet Agent (Centos)" \
