--- a/puppetdb-postgres/Dockerfile
+++ b/puppetdb-postgres/Dockerfile
@@ -1,6 +1,6 @@
 FROM postgres:9.6.8
 
-LABEL maintainer="Puppet Release Team <release@puppet.com>" \
+LABEL org.label-schema.maintainer="Puppet Release Team <release@puppet.com>" \
       org.label-schema.vendor="Puppet" \
       org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
       org.label-schema.name="PostgreSQL instance for PuppetDB" \
