--- a/puppetserver/Dockerfile
+++ b/puppetserver/Dockerfile
@@ -2,7 +2,7 @@ FROM puppet/puppetserver-standalone:5.3.1
 
 ENV PUPPETDB_TERMINUS_VERSION="5.2.2"
 
-LABEL maintainer="Puppet Release Team <release@puppet.com>" \
+LABEL org.label-schema.maintainer="Puppet Release Team <release@puppet.com>" \
       org.label-schema.vendor="Puppet" \
       org.label-schema.url="https://github.com/puppetlabs/puppet-in-docker" \
       org.label-schema.name="Puppet Server" \
